Moved game routes to OpenAPI spec
